# polkadot-sdk-workshop-xcm

./: Cargo.toml  README.md  book.toml  out  run_tests.sh  rust-toolchain.toml  test_all.sh  test_fundamentals.sh  test_simulator.sh  todo.md  trace.md
2/fundamentals/src/tests/: instruction.rs
4/fundamentals/src/: holding.rs
custom/: styles.css  tabs.js
docs/fundamentals/: holding.md  overview.md  xcm_executor.md
docs/fundamentals/pallet_xcm/: todo.md
docs/fundamentals/xcm_executor/: todo.md  xcm_executor.md
emulator/: Cargo.toml
emulator/src/: lib.rs
emulator/src/asset_hub_westend/: genesis.rs  mod.rs
emulator/src/network/: mod.rs
emulator/src/parachain/: genesis.rs  mod.rs
emulator/src/westend/: genesis.rs  mod.rs
execution/: Cargo.toml
execution/src/: lib.rs
execution/src/tests/: asset_transactor.rs  barrier.rs  common.rs  full.rs  mod.rs  reserves_and_teleports.rs
fundamentals/: Cargo.toml
fundamentals/src/: asset.rs  constants.rs  holding.rs  instruction.rs  lib.rs  location.rs  pallet_xcm.rs  xcm_executor.rs
fundamentals/src/network/: mock_message_queue.rs  mod.rs
fundamentals/src/network/parachain/: mod.rs
fundamentals/src/network/relay_chain/: mod.rs  process_message.rs
fundamentals/src/tests/: asset.rs  instruction.rs  location.rs  mod.rs  pallet_xcm.rs  xcm_executor.rs
fundamentals/src/tests/pallet_xcm/: mod.rs
parachain/: Cargo.toml
parachain/src/: apis.rs  benchmarks.rs  lib.rs
parachain/src/configs/: mod.rs  xcm.rs
parachain/src/configs/xcm/: asset_transactor.rs  barrier.rs  mod.rs  reserves_and_teleports.rs
parachain/src/weights/: mod.rs
simulator/: Cargo.toml
simulator/src/: constants.rs  lib.rs  mock_message_queue.rs
simulator/src/asset_hub/: mod.rs
simulator/src/asset_hub/xcm_config/: asset_transactor.rs  barrier.rs  constants.rs  mod.rs  reserve.rs  teleporter.rs  weigher.rs
simulator/src/parachain/: mod.rs
simulator/src/parachain/xcm_config/: asset_transactor.rs  barrier.rs  constants.rs  location_converter.rs  mod.rs  origin_converter.rs  reserve.rs  teleporter.rs  weigher.rs
simulator/src/relay_chain/: mod.rs
simulator/src/relay_chain/xcm_config/: constants.rs  mod.rs
simulator/src/tests/: asset_hub.rs  barriers.rs  mod.rs  other_parachain_tokens.rs  register_assets.rs  relay_token.rs
simulator/tests/: example.rs
src/: SUMMARY.md  lib.rs  main.rs  parachain.rs  relay_chain.rs  tests.rs
src/0/source/: changes.diff
src/1/: README.md
src/1/solution/: solution.diff
src/1/template/: README.md  template.diff
src/10/solution/: solution.diff
src/10/template/: template.diff
src/11/solution/: solution.diff
src/11/source/: README.md
src/11/template/: template.diff
src/12/: README.md
src/12/solution/: solution.diff
src/12/source/: changes.diff
src/12/template/: template.diff
src/13/: README.md
src/13/solution/: README.md  solution.diff
src/13/template/: template.diff
src/14/: README.md
src/14/solution/: README.md  solution.diff
src/14/template/: README.md  template.diff
src/15/: README.md
src/15/solution/: solution.diff
src/15/template/: template.diff
src/16/solution/: solution.diff
src/16/template/: template.diff
src/2/: README.md
src/2/solution/: README.md  solution.diff
src/2/template/: Cargo.toml  template.diff
src/3/: README.md
src/3/solution/: solution.diff
src/3/template/: README.md  template.diff
src/4/: README.md
src/4/solution/: solution.diff
src/4/template/: template.diff
src/5/: README.md
src/5/source/: README.md
src/6/: README.md
src/6/solution/: solution.diff
src/6/source/: changes.diff
src/7/: README.md
src/7/solution/: README.md  solution.diff
src/7/template/: README.md  template.diff
src/8/: README.md
src/8/solution/: README.md  solution.diff
src/8/template/: template.diff  todo.md
src/9/solution/: solution.diff
src/9/template/: README.md  template.diff
src/fundamentals/: asset.rs  holding.rs  instruction.rs  location.rs  mod.rs  pallet_xcm.rs  xcm_executor.rs
src/fundamentals/docs/: asset.md  instruction.md  overview.md
src/parachain/: mock_msg_queue.rs  mod.rs  xcm_config.rs
src/parachain/xcm_config/: asset_transactor.rs  barrier.rs  constants.rs  limits.rs  location_converter.rs  locations.rs  mod.rs  origin_converter.rs  reserve.rs  teleporter.rs  weigher.rs
src/relay_chain/: mod.rs
src/relay_chain/xcm_config/: asset_transactor.rs  constants.rs  limits.rs  location_converter.rs  locations.rs  mod.rs  origin_converter.rs  weigher.rs
src/tests/: example.rs  lesson_constants.rs  mod.rs
src/tests/fundamentals/: asset.rs  holding.rs  instruction.rs  location.rs  mod.rs  pallet_xcm.rs  xcm_executor.rs
steps/0/: gitorial_metadata.json
steps/0/fundamentals/src/: location.rs
steps/1/: gitorial_metadata.json  test_simulator.sh
steps/1/fundamentals/src/: location.rs
steps/10/: gitorial_metadata.json
steps/11/: gitorial_metadata.json  test_fundamentals.sh
steps/11/fundamentals/src/: xcm_executor.rs
steps/12/: gitorial_metadata.json
steps/12/fundamentals/: Cargo.toml
steps/13/: README.md  gitorial_metadata.json
steps/13/fundamentals/src/: asset.rs  xcm_executor.rs
steps/14/: gitorial_metadata.json
steps/15/: README.md
steps/16/: gitorial_metadata.json
steps/17/: README.md  gitorial_metadata.json
steps/18/: gitorial_metadata.json
steps/19/: gitorial_metadata.json
steps/2/: README.md  gitorial_metadata.json
steps/21/: README.md  gitorial_metadata.json
steps/21/fundamentals/src/: pallet_xcm.rs
steps/22/: README.md  gitorial_metadata.json
steps/23/: README.md
steps/23/fundamentals/src/: pallet_xcm.rs
steps/25/: README.md  gitorial_metadata.json
steps/25/fundamentals/src/: pallet_xcm.rs
steps/26/: gitorial_metadata.json
steps/26/fundamentals/src/: pallet_xcm.rs
steps/28/: README.md
steps/3/: gitorial_metadata.json
steps/4/: README.md
steps/5/: gitorial_metadata.json
steps/6/: README.md  gitorial_metadata.json
steps/7/: README.md
steps/8/: gitorial_metadata.json
steps/9/: README.md  gitorial_metadata.json
(+39 files in other folders)
